--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -6325,7 +6325,7 @@ button.close {
     display: none !important;
   }
 }
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 767px) and (max-width: 991px) {
   .hidden-sm {
     display: none !important;
   }
@@ -8094,9 +8094,6 @@ text-align: right;
   line-height: 2;
   color: #878787; }
 
-.bl_ind_cont {
-  margin-bottom: 155px; }
-
 .bl_purchase_terms {
   padding-left: 110px;
   padding-right: 110px; }
@@ -8452,11 +8449,11 @@ text-align: right;
   background-color: #64b357;
   color: white; }
   
-.page-content__video  iframe 
+/*.page-content__video  iframe 
 {
 	width: 100%;
 	height: 532px;
-}
+}*/
 
 .errors {
     color: #b36457;
