--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -6,7 +6,23 @@
  *
 */
 
+.menu_class_1 {
+    color: #999;
+    font-size: 11px;
+    font-weight: bold;
+    padding: 10px;
+    position: absolute;
+    border-right: 1px solid #dfdfdf;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 68px;
+}
 
+.menu_class_2 {
+    padding: 12px 0;
+    min-height: 68px;
+}
 
 .container {
     margin-right: auto;
