--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -6,23 +6,6 @@
  *
 */
 
-.menu_class_1 {
-    color: #999;
-    font-size: 11px;
-    font-weight: bold;
-    padding: 10px;
-    position: absolute;
-    border-right: 1px solid #dfdfdf;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: 68px;
-}
-
-.menu_class_2 {
-    padding: 12px 0;
-    min-height: 68px;
-}
 
 .container {
     margin-right: auto;
@@ -6461,4 +6444,29 @@ display:none;
     position: relative;
     padding: 5px 0 5px 10px;
 }
+}
+
+.menu_class_1 {
+    color: #999;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 10px;
+    border-right: 1px solid #dfdfdf;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 68px;
+
+}
+
+.menu_class_2 {
+    padding: 12px 0;
+    min-height: 68px;
+}
+
+.menu_class_3 {
+    -moz-transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    text-transform: uppercase;
 }
