--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -8374,7 +8374,8 @@ text-align: right;
 
 .bl_menu_table_day_row {
   position: relative;
-  padding: 5px 0 5px 100px; }
+  /*padding: 5px 0 5px 5px;*/
+}
 
 .bl_menu_table_day_row_day {
   color: #999;
